name:                nixdu
synopsis:            Interactively browse a Nix store paths dependencies
version:             0.0.1.0
homepage:            https://github.com/utdemir/nixdu
license:             BSD3
author:              Utku Demir
maintainer:          Utku Demir
copyright:           Utku Demir
category:            Data.Nix
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     PathStats
                     , StorePath
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       aeson
                     , async
                     , base >= 4.11 && < 5
                     , containers
                     , deepseq >= 1.4.4.0
                     , filepath
                     , hashable
                     , lens
                     , text
                     , transformers
                     , typed-process
                     , unordered-containers

executable nixdu
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    , brick
                    , containers
                    , deepseq >= 1.4.4.0
                    , directory
                    , filepath
                    , hrfsize
                    , nixdu
                    , text
                    , unordered-containers
                    , vty
