name:                nixdu
synopsis:            Interactively browse a Nix store paths dependencies
version:             0.0.1.0
homepage:            https://github.com/utdemir/nixdu
license:             BSD3
author:              Utku Demir
maintainer:          Utku Demir
copyright:           Utku Demir
category:            Data.Nix
build-type:          Simple
cabal-version:       >=1.10

executable nixdu
  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
  other-modules:      PathStats
                      StorePath
                      App
  ghc-options:        -Wall -fno-warn-name-shadowing -threaded -O2 -threaded
  build-depends:      base >= 4.11 && < 5
                    , aeson
                    , async
                    , brick
                    , containers
                    , deepseq
                    , directory
                    , filepath
                    , hashable
                    , hrfsize
                    , lens
                    , parallel
                    , protolude
                    , text
                    , transformers
                    , typed-process
                    , unordered-containers
                    , vty
